--- a/WPFTestingUI/MainWindow.xaml
+++ b/WPFTestingUI/MainWindow.xaml
@@ -18,6 +18,7 @@
             <StackPanel Orientation="Horizontal" Grid.Row="1" Height="50" HorizontalAlignment="Center">
                 <Button x:Name="PlayButton" Content="Play" Width="100" Height="25" Click="PlayButton_Click" Margin="0, 0, 2.5, 0"/>
                 <Button x:Name="PauseButton" Content="Pause" Width="100" Height="25"  Click="PauseButton_Click" Margin="2.5, 0, 0, 0"/>
+                <Button x:Name="ReloadButton" Content="Reload" Width="100" Height="25" Click="ReloadButton_Click"/>
             </StackPanel>
         </Grid>
     </Border>
